new changes after serious watch

--- a/static/main.css
+++ b/static/main.css
@@ -10,7 +10,7 @@ body {
   }
   
   .bg-steel {
-    background-color: #5f788a;
+    background-color: #c5b4509e;
   }
   
   .site-header .navbar-nav .nav-link {
