--- a/home/templates/layout.html
+++ b/home/templates/layout.html
@@ -24,8 +24,14 @@
                     <a class="nav-item nav-link" href="/about">About</a>
                 </div>
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="/login">Login</a>
-                    <a class="nav-item nav-link" href="/register">Register</a>
+                    {% if current_user.is_authenticated %}
+                        <a class="nav-item nav-link" href="#" onclick="confirmLogout()">Logout</a>
+                        <a class="nav-item nav-link" href="/account">Account</a>
+                        <a class="nav-item nav-link" href="/goal/new">New Goal</a>
+                    {% else %}
+                        <a class="nav-item nav-link" href="/login">Login</a>
+                        <a class="nav-item nav-link" href="/register">Register</a>
+                    {% endif %}
                 </div>
                 </div>
             </div>
@@ -63,5 +69,12 @@
         </main>
   
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+        <script>
+            function confirmLogout() {
+                if (confirm('Are you sure you want to logout?')) {
+                    window.location.href = '/logout';
+                }
+            }
+        </script>
     </body>
 </html>
