--- a/home/templates/user_goals.html
+++ b/home/templates/user_goals.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Home Page</h1>
+    <h1 class="mb-3">Goals of {{ user.username }} ({{ goals.total }})</h1>
     {% for goal in goals.items %}
         <article class="media content-section">
             <img class="rounded-circle article-img" scr="{{ url_for('static', filename='profile_pics/' + goal.author.image_file) }}">
@@ -17,9 +17,9 @@
     {% for page_num in goals.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
         {% if page_num %}
             {% if goal.page == page_num %}
-                <a class="btn btn-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a> 
+                <a class="btn btn-info mb-4" href="{{ url_for('user_goals', username=user.username, page=page_num) }}">{{ page_num }}</a> 
             {% else %}    
-                <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a> 
+                <a class="btn btn-outline-info mb-4" href="{{ url_for('user_goals', username=user.username, page=page_num) }}">{{ page_num }}</a> 
             {% endif %}
         {% else %}
             ...
