--- a/home/templates/user_goals.html
+++ b/home/templates/user_goals.html
@@ -3,20 +3,20 @@
     <h1 class="mb-3">Goals of {{ user.username }} ({{ goals.total }})</h1>
     {% for goal in goals.items %}
         <article class="media content-section">
-            <img class="rounded-circle article-img" scr="{{ url_for('static', filename='profile_pics/' + goal.author.image_file) }}">
+            <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + goal.owner.image_file) }}">
             <div class="media-body">
                 <div class="article-metadata">
                     <a class="mr-2" href="{{ url_for('user_goals', username=goal.owner.username)}}">{{ goal.owner.username }}</a>
                     <small class="text-muted"> {{ goal.date_time.strftime('%Y-%m-%d') }}</small>
                 </div>
                 <h2><a class="article-title" href="{{ url_for('goal', goal_id=goal.id) }}">{{ goal.title }}</a></h2>
-                <p class="article-content"> {{ goal.content }}</p>
+                <p class="article-content"> {{ goal.description }}</p>
             </div>
         </article>
     {% endfor %}
     {% for page_num in goals.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
         {% if page_num %}
-            {% if goal.page == page_num %}
+            {% if goals.page == page_num %}
                 <a class="btn btn-info mb-4" href="{{ url_for('user_goals', username=user.username, page=page_num) }}">{{ page_num }}</a> 
             {% else %}    
                 <a class="btn btn-outline-info mb-4" href="{{ url_for('user_goals', username=user.username, page=page_num) }}">{{ page_num }}</a> 
