--- a/home/templates/account.html
+++ b/home/templates/account.html
@@ -54,4 +54,7 @@
             </div>
         </form>
     </div>
+    <div class="mt-3">
+        <a class="btn btn-outline-secondary" href="{{ url_for('change_password') }}">Change Password</a>
+    </div>
 {% endblock %}
