--- a/home/templates/goal.html
+++ b/home/templates/goal.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>Home Page</h1>
     <article class="media content-section">
-        <img class="rounded-circle article-img" scr="{{ url_for('static', filename='profile_pics/' + goal.author.image_file) }}">
+        <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + goal.owner.image_file) }}">
         <div class="media-body">
             <div class="article-metadata">
                 <a class="mr-2" href="{{ url_for('user_goals', username=goal.owner.username)}}">{{ goal.owner.username }}</a>
@@ -14,8 +14,8 @@
                     </div>                   
                 {% endif %}
             </div>
-            <h2 class="article-title">{{ post.title }}</h2>
-            <p class="article-content"> {{ post.content }}</p>
+            <h2 class="article-title">{{ goal.title }}</h2>
+            <p class="article-content"> {{ goal.description }}</p>
         </div>
     </article>
     <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
