--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -1,4 +1,30 @@
 {% extends "layout.html" %}
 {% block content %}
-<h1>About Page</h1>
+    <h1>About</h1>
+    
+    <div class="card">
+        <h3>FundFlow</h3>
+        <p>A personal finance and goal management application.</p>
+    </div>
+    
+    <div class="card">
+        <h3>Features</h3>
+        <ul>
+            <li>Track savings and expenses</li>
+            <li>Set and manage financial goals</li>
+            <li>Create savings groups</li>
+            <li>Monitor progress with visual charts</li>
+            <li>User authentication and security</li>
+        </ul>
+    </div>
+    
+    <div class="card">
+        <h3>Technology</h3>
+        <ul>
+            <li>Python Flask framework</li>
+            <li>SQLite database</li>
+            <li>HTML/CSS frontend</li>
+            <li>Bootstrap styling</li>
+        </ul>
+    </div>
 {% endblock %}
